--- a/src/main/webapp/WEB-INF/classes/config.properties
+++ b/src/main/webapp/WEB-INF/classes/config.properties
@@ -1,12 +1,10 @@
+jdbc.driver=com.mysql.jdbc.Driver
 jdbc.url=jdbc:mysql://101.200.74.145:3306/ssm?useUnicode=true&characterEncoding=utf8
 jdbc.username=ssm
 jdbc.password=ssm
 
-
-##日志的存放目录
+#日志文件的保存目录
 logs.folder=.
 logs.root.level=debug
-##控制台的日志打印级别
 logs.console.level=debug
-##日志文件中的日志打印级别
 logs.file.level=debug
