--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <com.mybatis.mybatis.version>3.4.1</com.mybatis.mybatis.version>
         <com.mybatis.mybatis_spring.version>1.3.0</com.mybatis.mybatis_spring.version>
         <log4j2.version>2.8.1</log4j2.version>
+        <shiro.version>1.3.2</shiro.version>
 
 
     </properties>
@@ -172,6 +173,12 @@
             <version>2.5</version>
         </dependency>
 
+        <!-- shiro 工具类集合-->
+        <dependency>
+            <groupId>org.apache.shiro</groupId>
+            <artifactId>shiro-all</artifactId>
+            <version>${shiro.version}</version>
+        </dependency>
 
 
 
