--- a/src/main/filters/filter-dev.properties
+++ b/src/main/filters/filter-dev.properties
@@ -5,8 +5,8 @@ jdbc.password=ssm
 
 ##日志的存放目录
 logs.folder=.
-logs.root.level=debug
+logs.root.level=info
 ##控制台的日志打印级别
-logs.console.level=debug
+logs.console.level=info
 ##日志文件中的日志打印级别
-logs.file.level=debug
+logs.file.level=info
