增加redis客户端

--- a/src/main/filters/filter-dev.properties
+++ b/src/main/filters/filter-dev.properties
@@ -10,3 +10,7 @@ logs.root.level=debug
 logs.console.level=debug
 ##日志文件中的日志打印级别
 logs.file.level=debug
+
+redis.host=10.159.39.34
+redis.port=6379
+redis.password=redis_39.34
