--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -8,3 +8,8 @@ logs.folder=${logs.folder}
 logs.root.level=${logs.root.level}
 logs.console.level=${logs.console.level}
 logs.file.level=${logs.file.level}
+
+#redis 配置
+redis.host=${redis.host}
+redis.port=${redis.port}
+redis.password=${redis.password}
