--- a/src/main/filters/filter-production.properties
+++ b/src/main/filters/filter-production.properties
@@ -1,3 +1,15 @@
 jdbc.url=jdbc:mysql://101.200.74.145:3306/ssm?useUnicode=true&characterEncoding=utf8
 jdbc.username=ssm
 jdbc.password=ssm
+
+##日志的存放目录
+logs.folder=.
+logs.root.level=debug
+##控制台的日志打印级别
+logs.console.level=debug
+##日志文件中的日志打印级别
+logs.file.level=debug
+
+redis.host=10.159.39.34
+redis.port=6379
+redis.password=redis_39.34
