--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,6 +23,11 @@
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
 
+    <listener>
+        <description>随时对地通过((ServletRequestAttributes) RequestContextHolder.getRequestAttributes()).getRequest()获取当前request</description>
+        <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
+    </listener>
+
     <!-- 配置DispatcherServlet -->
     <servlet>
         <display-name>ssm</display-name>    <!-- 项目名称 -->
