--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <com.mybatis.mybatis_spring.version>1.3.0</com.mybatis.mybatis_spring.version>
         <log4j2.version>2.8.1</log4j2.version>
         <shiro.version>1.3.2</shiro.version>
+        <impala.jdbc.version>2.5.37</impala.jdbc.version>
 
 
     </properties>
@@ -159,7 +160,7 @@
             <version>1.2.29</version>
         </dependency>
 
-        <!--log配置：Log4j2 + Slf4j-->
+        <!--log配置：Slf4j + Log4j2-->
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
@@ -212,7 +213,64 @@
             <version>3.5</version>
         </dependency>
 
+        <!-- impala jdbc 相关的 Jar 包-->
+        <dependency>
+            <groupId>org.apache.thrift</groupId>
+            <artifactId>libfb303</artifactId>
+            <version>0.9.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.thrift</groupId>
+            <artifactId>libthrift</artifactId>
+            <version>0.9.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.zookeeper</groupId>
+            <artifactId>zookeeper</artifactId>
+            <version>3.4.6</version>
+        </dependency>
 
+        <dependency>
+            <groupId>com.cloudera.impala.jdbc</groupId>
+            <artifactId>hive_metastore</artifactId>
+            <version>${impala.jdbc.version}</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/hive_metastore.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>com.cloudera.impala.jdbc</groupId>
+            <artifactId>hive_service</artifactId>
+            <version>${impala.jdbc.version}</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/hive_service.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>com.cloudera.impala.jdbc</groupId>
+            <artifactId>ImpalaJDBC41</artifactId>
+            <version>${impala.jdbc.version}</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/ImpalaJDBC41.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>com.cloudera.impala.jdbc</groupId>
+            <artifactId>ql</artifactId>
+            <version>${impala.jdbc.version}</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/ql.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>com.cloudera.impala.jdbc</groupId>
+            <artifactId>TCLIServiceClient</artifactId>
+            <version>${impala.jdbc.version}</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/TCLIServiceClient.jar</systemPath>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.5.11</version>
+        </dependency>
 
 
 
